# roadstate

./: README.md  pyproject.toml
src/roadstate/: __init__.py  state.py
