[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roadstate"
version = "0.1.0"
description = "State Machines for BlackRoad"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "black", "mypy"]
